--- a/TNT.Core.Helpers/TNT.Core.Helpers/TNT.Core.Helpers.csproj
+++ b/TNT.Core.Helpers/TNT.Core.Helpers/TNT.Core.Helpers.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Cors" Version="5.2.7" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="System.Reflection.Emit" Version="4.3.0" />
   </ItemGroup>
