--- a/TNT.Core.Template/TNT.Core.Template.csproj
+++ b/TNT.Core.Template/TNT.Core.Template.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Cors" Version="5.2.7" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.0.15" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
